[prone] fix `UTF_8`
Signed-off-by: Vincent Potucek <vpotucek@me.com>